--- a/index.html
+++ b/index.html
@@ -72,34 +72,35 @@
             </A>
             <ul>
                 <li> <b>
-                    <font color="#FF0000">[2021.07]</font>
-                </b> Dr. Gao was invited as the <b>Associate Editor</b> of IEEE Communications Letters (
-                <a href=" " target="_blank">
-                    <font style="font-family:Microsoft YaHei">高镇入选重要期刊IEEE Communications Letters编委</font>
-                </a>)
+                        <font color="#FF0000">[2021.07]</font>
+                    </b> Dr. Gao was invited as the <b>Associate Editor</b> of IEEE Communications Letters (
+                    <a href=" " target="_blank">
+                        <font style="font-family:Microsoft YaHei">高镇入选重要期刊IEEE Communications Letters编委</font>
+                    </a>)
                 </li>
                 <li> <b>
-                    <font color="#FF0000">[2021.07]</font>
-                </b> Yang Wang and Minghui Wu were respectively awarded <b>Second</b> and <b>Third</b> Prizes of Wireless Big Data Competition (
-                <a href=" " target="_blank">
-                    <font style="font-family:Microsoft YaHei">王洋 吴铭晖 获得第二届无线大数据竞赛-AI无线网络信道重构二等奖、三等奖</font>
-                </a>)
-                </li>
-
-                <li> <b>
-                    <font color="#FF0000">[2021.07]</font>
-                </b> Paper of Li Qiao was accepted by <b>IEEE Transactions on Wireless Communications</b>(
-                <a href="https://arxiv.org/abs/2104.03874" target="_blank">
-                    <font style="font-family:Microsoft YaHei">乔力 论文被TWC(<b>IF=7.016</b>)期刊录用</font>
-                </a>)【物联网海量机器类通信】
+                        <font color="#FF0000">[2021.07]</font>
+                    </b> Yang Wang and Minghui Wu were respectively awarded <b>Second</b> and <b>Third</b> Prizes of
+                    Wireless Big Data Competition (
+                    <a href=" " target="_blank">
+                        <font style="font-family:Microsoft YaHei">王洋 吴铭晖 获得第二届无线大数据竞赛-AI无线网络信道重构二等奖、三等奖</font>
+                    </a>)
                 </li>
 
                 <li> <b>
-                    <font color="#FF0000">[2021.06]</font>
-                </b> Paper of Malong Ke was accepted by <b>IEEE Wireless Communications Magazine</b>(
-                <a href="" target="_blank">
-                    <font style="font-family:Microsoft YaHei">柯玛龙 论文被WCM(<b>IF=11.391</b>)期刊录用</font>
-                </a>)【空基海量物联网接入】
+                        <font color="#FF0000">[2021.07]</font>
+                    </b> Paper of Li Qiao was accepted by <b>IEEE Transactions on Wireless Communications</b>(
+                    <a href="https://arxiv.org/abs/2104.03874" target="_blank">
+                        <font style="font-family:Microsoft YaHei">乔力 论文被TWC(<b>IF=7.016</b>)期刊录用</font>
+                    </a>)【物联网海量机器类通信】
+                </li>
+
+                <li> <b>
+                        <font color="#FF0000">[2021.06]</font>
+                    </b> Paper of Malong Ke was accepted by <b>IEEE Wireless Communications Magazine</b>(
+                    <a href="" target="_blank">
+                        <font style="font-family:Microsoft YaHei">柯玛龙 论文被WCM(<b>IF=11.391</b>)期刊录用</font>
+                    </a>)【空基海量物联网接入】
                 </li>
 
                 <li> <b>
@@ -314,9 +315,49 @@
             <p><b>Journals</b>: </p>
             <font size="3">
                 <ul>
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[34] Y. Wang, <b>Z. Gao</b>, J. Zhang, X. Cao, D. Zheng, Y. Gao, D. W. K. Ng, M. D. Renzo,
+                            "Trajectory Design for UAV-Based Internet-of-Things Data Collection: A Deep Reinforcement
+                            Learning Approach," in IEEE Internet of Things Journal
+                            (<b>SCI Q1 Top, IF=9.417</b>)
+                            [<a href="https://ieeexplore.ieee.org/document/9504602" target="_blank">URL</a>]
+                        </span>
+
+                    </p>
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
+                                    <i class="fa fa-folder-open-o" aria-hidden="true">&nbsp;&nbsp;Click here to
+                                        unfold/fold video.</i>
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseThree" class="panel-collapse collapse">
+                            <div class="panel-body" style="position: relative; padding: 30% 45%;">
+                                <iframe
+                                    src="//player.bilibili.com/player.html??aid=504502841&bvid=BV1qg41177s4&cid=380954841&page=1&as_wide=1&high_quality=1&danmaku="
+                                    scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
+                                    style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
+                                </iframe>
+                            </div>
+                        </div>
+                    </div>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[32] L. Qiao, J. Zhang, <b>Z. Gao</b>, D. W. K. Ng, M. D. Renzo, M.-S Alouini, "Massive Access in Media Modulation Based Massive
+                        <span>[33] S. Liu, <b>Z. Gao</b>, Y. Wu, D. W. K. Ng, X. Gao, K.-K Wong, S. Chatzinotas, B.
+                            Ottersten, "LEO Satellite Constellations for 5G and Beyond: How Will They Reshape Vertical
+                            Domains?," in IEEE Communications Magazine, vol. 59, no. 7, pp. 30-36, July 2021.
+                            (<b>SCI Q1 Top, IF=9.619</b>)
+                            [<a href="https://ieeexplore.ieee.org/document/9502642" target="_blank">URL</a>]
+                        </span>
+
+                    </p>
+
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[32] L. Qiao, J. Zhang, <b>Z. Gao</b>, D. W. K. Ng, M. D. Renzo, M.-S Alouini, "Massive
+                            Access in Media Modulation Based Massive
                             Machine-Type Communications," in IEEE Transactions on Wireless Communications.
                             (<i>Pre-Print</i>)
                             [<a href="https://arxiv.org/abs/2104.03874" target="_blank">URL</a>]
@@ -327,8 +368,8 @@
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[31] X. Ma, <b>Z. Gao</b>, F. Gao, M. D. Renzo, "Model-Driven Deep Learning Based Channel
                             Estimation and Feedback for Millimeter-Wave Massive Hybrid MIMO Systems," in IEEE Journal on
-                            Selected Areas in Communications.
-                            (<i>Early Access</i>, <b>SCI Q1 Top, IF=11.42</b>)
+                            Selected Areas in Communications, vol. 39, no. 8, pp. 2388-2406, Aug. 2021.
+                            (<b>SCI Q1 Top, IF=11.42</b>)
                             [<a href="https://ieeexplore.ieee.org/document/9452036" target="_blank">URL</a>]
                         </span>
 
@@ -358,7 +399,8 @@
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[30] A. Liao, <b>Z. Gao</b>, D. Wang, H. Wang, H. Yin, D. W. K. Ng, M.-S. Alouini,
                             "Terahertz Ultra-Massive MIMO-Based Aeronautical Communications in
-                            Space-Air-Ground Integrated Networks," in IEEE Journal on Selected Areas in Communications.
+                            Space-Air-Ground Integrated Networks," in IEEE Journal on Selected Areas in Communications,
+                            vol. 39, no. 6, pp. 1741-1767, June 2021.
                             (<b>SCI Q1 Top, IF=11.42</b>)
                             [<a href="https://ieeexplore.ieee.org/document/9398858" target="_blank">URL</a>]
                         </span>
@@ -368,8 +410,7 @@
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[29] Z. Wan, <b>Z. Gao</b>, F. Gao, M. D. Renzo, M.-S. Alouini, "Terahertz Massive MIMO
                             with Holographic Reconfigurable Intelligent Surfaces," in IEEE Transactions on
-                            Communications.
-                            (<i>Early Access</i>)
+                            Communications, vol. 69, no. 7, pp. 4732-4750, July 2021.
                             [<a href="https://ieeexplore.ieee.org/document/9374451/" target="_blank">URL</a>]
                             [<a href="https://github.com/gaozhen16/Source-Code-Z.Wan/tree/main/Code_THzHoloRIS_CSbasedCE/Code_THzHoloRIS_CSbasedCE"
                                 target="_blank">Code</a>]
@@ -409,8 +450,9 @@
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[27] M. Ke, <b>Z. Gao</b>, Y. Wu, X. Gao and K. Wong, "Massive Access in Cell-Free Massive
                             MIMO-Based Internet of Things: Cloud Computing and Edge Computing Paradigms," <i>IEEE
-                                Journal on Selected Areas in Communications</i>.
-                            (<b>SCI Q1 Top, IF=11.42</b>, <i>Early Access</i>)
+                                Journal on Selected Areas in Communications</i>, vol. 39, no. 3, pp. 756-772, March
+                            2021.
+                            (<b>SCI Q1 Top, IF=11.42</b>)
                             [<a href="https://ieeexplore.ieee.org/document/9174777" target="_blank">URL</a>]
                             [<a href="https://arxiv.org/abs/2007.09617" target="_blank">Arxiv</a>]
                             [<a href="https://github.com/gaozhen16/Source-Code-M.Ke/tree/main/code_jsac2020"
@@ -468,8 +510,7 @@
                                 Access</i>, vol. 8, pp. 19530-19539, 2020.
                             (<b>SCI Q2, IF=3.745</b>)
                             [<a href="https://ieeexplore.ieee.org/document/8964330" target="_blank">URL</a>]
-                            [<a href="https://github.com/cokechen/GmdHbf_Access"
-                                target="_blank">Code</a>]
+                            [<a href="https://github.com/cokechen/GmdHbf_Access" target="_blank">Code</a>]
                         </span>
                     </p>
 
