--- a/index.html
+++ b/index.html
@@ -319,8 +319,10 @@
                         <span>[34] Y. Wang, <b>Z. Gao</b>, J. Zhang, X. Cao, D. Zheng, Y. Gao, D. W. K. Ng, M. D. Renzo,
                             "Trajectory Design for UAV-Based Internet-of-Things Data Collection: A Deep Reinforcement
                             Learning Approach," in IEEE Internet of Things Journal
-                            (<b>SCI Q1 Top, IF=9.417</b>)
+                            (<b>SCI Q1 Top, IF=9.417</b>, <i>Early Access</i>)
                             [<a href="https://ieeexplore.ieee.org/document/9504602" target="_blank">URL</a>]
+                            [<a href="https://github.com/yang05941601/UAV-Navigation-Learning"
+                                target="_blank">Code</a>]
                         </span>
 
                     </p>
