--- a/index.html
+++ b/index.html
@@ -316,13 +316,21 @@
             <font size="3">
                 <ul>
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[35] Y. Mei, <b>Z. Gao</b>, Y. Wu, W. Chen, D. W. K. Ng, M. Di Renzo, "Compressive Sensing
+                            Based Joint Activity and Data Detection for Grant-Free Massive Access," arXiv preprint
+                            arXiv:2011.07928 (2020).
+                            (<i>Pre-Print</i>)
+                            [<a href="https://arxiv.org/abs/2011.07928" target="_blank">URL</a>]
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[34] Y. Wang, <b>Z. Gao</b>, J. Zhang, X. Cao, D. Zheng, Y. Gao, D. W. K. Ng, M. D. Renzo,
                             "Trajectory Design for UAV-Based Internet-of-Things Data Collection: A Deep Reinforcement
                             Learning Approach," in IEEE Internet of Things Journal
                             (<b>SCI Q1 Top, IF=9.417</b>, <i>Early Access</i>)
                             [<a href="https://ieeexplore.ieee.org/document/9504602" target="_blank">URL</a>]
-                            [<a href="https://github.com/yang05941601/UAV-Navigation-Learning"
-                                target="_blank">Code</a>]
+                            [<a href="https://github.com/yang05941601/UAV-Navigation-Learning" target="_blank">Code</a>]
                         </span>
 
                     </p>
@@ -461,11 +469,10 @@
 
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[28] Y. Mei, <b>Z. Gao</b>, Y. Wu, W. Chen, D. W. K. Ng, M. Di Renzo, "Compressive Sensing
-                            Based Joint Activity and Data Detection for Grant-Free Massive Access," arXiv preprint
-                            arXiv:2011.07928 (2020).
-                            (<i>Pre-Print</i>)
-                            [<a href="https://arxiv.org/abs/2011.07928" target="_blank">URL</a>]
+                        <span>[28] S. Lyu, Z. Wang, <b>Z. Gao</b>, H. He and L. Hanzo, "Lattice-Based mmWave Hybrid
+                            Beamforming," in IEEE Transactions on Communications, vol. 69, no. 7, pp. 4907-4920, July
+                            2021.
+                            [<a href="https://ieeexplore.ieee.org/document/9411813" target="_blank">URL</a>]
                         </span>
                     </p>
 
