--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <font color="#FF0000">[2021.07]</font>
                     </b> Dr. Gao was invited as the <b>Associate Editor</b> of IEEE Communications Letters (
                     <a href=" " target="_blank">
-                        <font style="font-family:Microsoft YaHei">高镇入选重要期刊IEEE Communications Letters编委</font>
+                        <font style="font-family:PingFangSC-Regular, sans-serif">高镇入选重要期刊IEEE Communications Letters编委</font>
                     </a>)
                 </li>
                 <li> <b>
