--- a/index.html
+++ b/index.html
@@ -58,11 +58,10 @@
                                 <br /> Email: <a href=mailto:gaozhen16@bit.edu.cn>gaozhen16@bit.edu.cn</a> (prior);
                                 &nbsp;&nbsp;&nbsp;&nbsp;
                                 <a href=mailto:gaozhen010375@foxmail.com>gaozhen010375@foxmail.com</a>
-                                <br /> [
-                                <a href="https://scholar.google.com/citations?user=4ylyExkAAAAJ" target="_blank">Google
-                                    Scholar</a>] [
-                                <a href="https://ieeexplore.ieee.org/author/37073332000" target="_blank">IEEE</a>] [
-                                <a href="https://github.com/gaozhen16" target="_blank">GitHub</a>]
+                                <br /> 
+                                [<a href="https://scholar.google.com/citations?user=4ylyExkAAAAJ" target="_blank">Google Scholar</a>]
+                                [<a href="https://ieeexplore.ieee.org/author/37073332000" target="_blank">IEEE</a>]
+                                [<a href="https://github.com/gaozhen16" target="_blank">GitHub</a>]
                     </td>
                 </tr>
             </table>
@@ -75,7 +74,7 @@
                         <font color="#FF0000">[2021.07]</font>
                     </b> Dr. Gao was invited as the <b>Associate Editor</b> of IEEE Communications Letters (
                     <a href=" " target="_blank">
-                        <font style="font-family:PingFangSC-Regular, sans-serif">高镇入选重要期刊IEEE Communications Letters编委</font>
+                        <font style="font-family:-apple-system,PingFang SC,Georgia,Microsoft YaHei,WenQuanYi Micro Hei,sans-serif">高镇入选重要期刊IEEE Communications Letters编委</font>
                     </a>)
                 </li>
                 <li> <b>
