--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                 <font size="4" ; font style="font-family:Microsoft YaHei">高 镇</font>
                                 <font size="4">)</font>
                             </a><br />
-                            <i> Ph.D, Assistant Professor, PhD Tutor </i>
+                            <i> Ph.D., Assistant Professor, PhD Tutor </i>
                             <br /><br />
                             <a href="http://arims.bit.edu.cn/" target="_blank">Advanced Research Institute of
                                 Multidisciplinary Science (ARIMS)</a><br />
@@ -74,7 +74,7 @@
                         <font color="#FF0000">[2021.07]</font>
                     </b> Dr. Gao was invited as the <b>Associate Editor</b> of IEEE Communications Letters (
                     <a href=" " target="_blank">
-                        <font style="font-family:-apple-system,PingFang SC,Georgia,Microsoft YaHei,WenQuanYi Micro Hei,sans-serif">高镇入选重要期刊IEEE Communications Letters编委</font>
+                        <font>高镇入选重要期刊IEEE Communications Letters编委</font>
                     </a>)
                 </li>
                 <li> <b>
@@ -134,14 +134,14 @@
                     </a>)
                 </li>
 
-                <li> <b>
+                <!--<li> <b>
                         <font color="#FF0000">[2020.12]</font>
                     </b> Minghui Wu was awarded <b>Second Prize</b> of National Competition of AI (
                     <a href="https://mp.weixin.qq.com/s/yqaVs5dDe5mQwGoZwIeENA" target="_blank">
                         <font style="font-family:Microsoft YaHei">吴铭晖 获得全国人工智能大赛二等奖</font>
                     </a>)
                 </li>
-
+                -->
 
             </ul>
             <br />
