--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </b> Yang Wang and Minghui Wu were respectively awarded <b>Second</b> and <b>Third</b> Prizes of
                     Wireless Big Data Competition (
                     <a href=" " target="_blank">
-                        <font style="font-family:Microsoft YaHei">王洋 吴铭晖 获得第二届无线大数据竞赛-AI无线网络信道重构二等奖、三等奖</font>
+                        <font>王洋 吴铭晖 获得第二届无线大数据竞赛-AI无线网络信道重构二等奖、三等奖</font>
                     </a>)
                 </li>
 
@@ -90,7 +90,7 @@
                         <font color="#FF0000">[2021.07]</font>
                     </b> Paper of Li Qiao was accepted by <b>IEEE Transactions on Wireless Communications</b>(
                     <a href="https://arxiv.org/abs/2104.03874" target="_blank">
-                        <font style="font-family:Microsoft YaHei">乔力 论文被TWC(<b>IF=7.016</b>)期刊录用</font>
+                        <font>乔力 论文被TWC(<b>IF=7.016</b>)期刊录用</font>
                     </a>)【物联网海量机器类通信】
                 </li>
 
@@ -98,15 +98,15 @@
                         <font color="#FF0000">[2021.06]</font>
                     </b> Paper of Malong Ke was accepted by <b>IEEE Wireless Communications Magazine</b>(
                     <a href="" target="_blank">
-                        <font style="font-family:Microsoft YaHei">柯玛龙 论文被WCM(<b>IF=11.391</b>)期刊录用</font>
+                        <font>柯玛龙 论文被WCM(<b>IF=11.391</b>)期刊录用</font>
                     </a>)【空基海量物联网接入】
                 </li>
 
                 <li> <b>
                         <font color="#FF0000">[2021.05]</font>
                     </b> Paper of Shicong Liu was accepted by <b>IEEE Communications Magazine</b>(
-                    <a href="" target="_blank">
-                        <font style="font-family:Microsoft YaHei">刘仕聪 论文被COMMAG(<b>IF=11.052</b>)期刊录用</font>
+                    <a href="https://ieeexplore.ieee.org/document/9502642" target="_blank">
+                        <font>刘仕聪 论文被COMMAG(<b>IF=11.052</b>)期刊录用</font>
                     </a>)【LEO卫星与B5G垂直应用】
                 </li>
 
@@ -114,7 +114,7 @@
                         <font color="#FF0000">[2021.04]</font>
                     </b> Paper of Xisuo Ma was accepted by <b>IEEE Journal on Selected Areas in Communications</b>(
                     <a href="https://ieeexplore.ieee.org/document/9452036" target="_blank">
-                        <font style="font-family:Microsoft YaHei">马西锁 论文被JSAC(<b>IF=11.42</b>)期刊录用</font>
+                        <font>马西锁 论文被JSAC(<b>IF=11.42</b>)期刊录用</font>
                     </a>)【模型驱动深度学习的MIMO传输】
                 </li>
 
@@ -122,7 +122,7 @@
                         <font color="#FF0000">[2021.03]</font>
                     </b> Paper of Anwen Liao was accepted by <b>IEEE Journal on Selected Areas in Communications</b>(
                     <a href="https://ieeexplore.ieee.org/document/9398858" target="_blank">
-                        <font style="font-family:Microsoft YaHei">廖安文 论文被JSAC(<b>IF=11.42</b>)期刊录用</font>
+                        <font>廖安文 论文被JSAC(<b>IF=11.42</b>)期刊录用</font>
                     </a>)
                 </li>
 
@@ -130,7 +130,7 @@
                         <font color="#FF0000">[2021.02]</font>
                     </b> Paper of Ziwei Wan was accepted by <b>IEEE Transactions of Communications</b>(
                     <a href="https://arxiv.org/abs/2009.10963" target="_blank">
-                        <font style="font-family:Microsoft YaHei">万子维 论文被TCOM(<b>IF=5.646</b>)期刊录用</font>
+                        <font>万子维 论文被TCOM(<b>IF=5.646</b>)期刊录用</font>
                     </a>)
                 </li>
 
@@ -298,7 +298,7 @@
 
                     <p style="text-indent: -1.5rem;margin-left: 0rem;">
                         <span>
-                            [4] <font style="font-family:Microsoft YaHei">杨昉, 刘思聪, <b>高镇</b>. "<i>5G 移动通信空口新技术</i>",
+                            [4] <font style="font-family:Microsoft YaHei">杨昉, 刘思聪, <b>高镇</b>. "<i>5G 移动通信空口新技术</i> ",
                                 电子工业出版社.</font>
                             [<a href="https://item.jd.com/12695491.html" target="_blank">Buy</a>]
                         </span>
