--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
                                 <br /> Email: <a href=mailto:gaozhen16@bit.edu.cn>gaozhen16@bit.edu.cn</a> (prior);
                                 &nbsp;&nbsp;&nbsp;&nbsp;
                                 <a href=mailto:gaozhen010375@foxmail.com>gaozhen010375@foxmail.com</a>
-                                <br /> 
-                                [<a href="https://scholar.google.com/citations?user=4ylyExkAAAAJ" target="_blank">Google Scholar</a>]
+                                <br />
+                                [<a href="https://scholar.google.com/citations?user=4ylyExkAAAAJ" target="_blank">Google
+                                    Scholar</a>]
                                 [<a href="https://ieeexplore.ieee.org/author/37073332000" target="_blank">IEEE</a>]
                                 [<a href="https://github.com/gaozhen16" target="_blank">GitHub</a>]
                     </td>
@@ -151,22 +152,21 @@
             </A>
             Zhen Gao (Member, IEEE) received the B.S. degree in information engineering from the Beijing Institute of
             Technology, Beijing, China, in July 2011, and the Ph.D. degree in communication and signal processing from
-            the Tsinghua National Laboratory for Information
-            Science and Technology, Department of Electronic Engineering, Tsinghua University, China, in July 2016.,From
-            2014 to 2015, he visited the Communications and Signal Processing Group, Imperial College London, U.K., for
-            nearly one year. He is
-            currently an Assistant Professor with the Advanced Research Institute of Multidisciplinary Science (ARIMS)
-            and the School of Information and Electronics, Beijing Institute of Technology, Beijing, China. His research
-            interests are in wireless
-            communications, with a focus on multicarrier modulations, multiple antenna systems, and sparse signal
-            processing. He was a recipient of the IEEE Broadcast Technology Society, in 2016, the Scott Helt Memorial
-            Award (Best Paper) and IET Electronics
-            Letters Premium Award (Best Paper), in 2016, the Exemplary Reviewer of the IEEE Communications Letters, in
-            2016, the Academic Star of Tsinghua University, in 2016, and the Young Elite Scientists Sponsorship Program
-            from the China Association
-            for Science and Technology, from 2018 to 2021. He currently serves as an Associate Editor for IEEE Access.
+            the Tsinghua National Laboratory for Information Science and Technology, Department of Electronic
+            Engineering, Tsinghua University, China, in July 2016.
+            From 2014 to 2015, he visited the Communications and Signal Processing Group, Imperial College London, U.K.,
+            for nearly one year. He is currently an Assistant Professor with the Advanced Research Institute of
+            Multidisciplinary Science (ARIMS) and the School of Information and Electronics, Beijing Institute of
+            Technology, Beijing, China. His research interests are in wireless communications, with a focus on
+            multicarrier modulations, multiple antenna systems, and sparse signal processing.
+            <br />
+            He was a recipient of the IEEE Broadcast Technology Society, in 2016, the Scott Helt Memorial
+            Award (Best Paper) and IET Electronics Letters Premium Award (Best Paper), in 2016, the Exemplary Reviewer
+            of the IEEE Communications Letters, in 2016, the Academic Star of Tsinghua University, in 2016, and the
+            Young Elite Scientists Sponsorship Program from the China Association for Science and Technology, from 2018
+            to 2021. He currently serves as an Associate Editor for IEEE Access and IEEE Communications Letters.
             <ul>
-                <li>Wireless Communications</li>
+                <li><b><font style="font-size: 20px;">Wireless Communications</font></b></li>
                 <li>Channel Estimation of mmWave/THz Hybrid Massive MIMO</li>
                 To acquire the channel state information (CSI) of millimeter-wave (mmWave) or terahertz (THz) hybrid
                 massive multiple-input-multiple-output (MIMO) systems, the reliable and efficient channel estimation
