--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             to 2021. He currently serves as an Associate Editor for IEEE Access and IEEE Communications Letters.
             <ul>
                 <li><b><font style="font-size: 20px;">Wireless Communications</font></b></li>
-                <li>Channel Estimation of mmWave/THz Hybrid Massive MIMO</li>
+                <li><b><font style="font-size: 20px;">Channel Estimation of mmWave/THz Hybrid Massive MIMO</font></b></li>
                 To acquire the channel state information (CSI) of millimeter-wave (mmWave) or terahertz (THz) hybrid
                 massive multiple-input-multiple-output (MIMO) systems, the reliable and efficient channel estimation
                 methods with low training overhead and computational
@@ -217,7 +217,7 @@
 
                 <img src="./Files/MIMO_Precoding.jpg" title="Fig. " alt="MIMO" style="display:block; margin:0 auto;">
                 <br>-->
-                <li>Sparse Signal Processing</li>
+                <li><b><font style="font-size: 20px;">Sparse Signal Processing</font></b></li>
                 Compressed sensing is a signal processing technique for efficiently acquiring and reconstructing a
                 signal, by finding solutions to underdetermined linear systems. This is based on the principle that,
                 through optimization, the sparsity of a signal can
@@ -236,7 +236,7 @@
                 <img src="./Files/Autoencoder_structure.png" title="Fig. " alt="Feature" width="450" height="360"
                     style="display:block; margin:0 auto;">
                 -->
-                <li>Deep Learning based Solutions in Wireless Systems</li>
+                <li><b><font style="font-size: 20px;">Deep Learning based Solutions in Wireless Systems</font></b></li>
                 The reliable channel estimation for millimeter-wave massive hybrid MIMO systems is indispensable. Based
                 on deep learning, the dominated research directions of channel estimation include <b>
                     <font color="#FF0000">1)</font>
