--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 <h2><i class="fa fa-book" aria-hidden="true"></i>&nbsp;&nbsp;Publications</h2>
             </A>
 
-            <p><b>Book Chapters</b>: </p>
+            <p><b><font style="font-size: 20px;">Book Chapters</font></b>: </p>
             <font size="3">
                 <ul>
                     <p style="text-indent: -1.5rem;margin-left: 0rem;">
@@ -311,7 +311,7 @@
             <br />
 
 
-            <p><b>Journals</b>: </p>
+            <p><b><font style="font-size: 20px;">Journals</font></b>: </p>
             <font size="3">
                 <ul>
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
@@ -774,7 +774,7 @@
 
 
 
-            <p><b>Conferences</b>: </p>
+            <p><b><font style="font-size: 20px;">Conferences</font></b>: </p>
             <font size="3">
                 <ul>
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
@@ -992,7 +992,7 @@
                     <h2><i class="fa fa-pencil-square-o" aria-hidden="true"></i>&nbsp;&nbsp;Services</h2>
                 </A>
 
-                <p><b>Membership</b>: </p>
+                <p><b><font style="font-size: 20px;">Membership</font></b>: </p>
                 <font size="3">
                     <ul>
                         <li>IEEE Member</li>
@@ -1002,7 +1002,7 @@
                 <br />
                 <br />
 
-                <p><b>Associated Editor</b>: </p>
+                <p><b><font style="font-size: 20px;">Associate Editor</font></b>: </p>
                 <font size="3">
                     <ul>
                         <li>IEEE Communications Letters</li>
@@ -1015,7 +1015,7 @@
                 <br />
 
 
-                <p><b>Journal Reviewer</b>: </p>
+                <p><b><font style="font-size: 20px;">Journal Reviewer</font></b>: </p>
                 <font size="3">
                     <ul>
                         <li>IEEE Access</li>
